Run GitHub Actions build on AdoptOpenJDK 11 and use v2 of setup-java action.