@@ -81,6 +81,10 @@ checkUnitTestLayout {
     )
 }
 
+application {
+    applicationDefaultJvmArgs = ["--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"]
+}
+
 apply from: "gradle/completionTest.gradle"
 apply from: "gradle/journeyTest.gradle"
 apply from: "gradle/profiling.gradle"
